--- a/pom.xml
+++ b/pom.xml
@@ -71,7 +71,8 @@
 		<dependency>
 			<groupId>org.glassfish.web</groupId>
 			<artifactId>javax.el</artifactId>
-			<version>2.2.4</version>			
+			<version>2.2.4</version>
+			<scope>provided</scope>			
 		</dependency>
 		<dependency>
 			<groupId>log4j</groupId>
@@ -89,6 +90,19 @@
 			<artifactId>validation-api</artifactId>
 			<version>1.1.0.Final</version>
 		</dependency>
+		<dependency>
+			<groupId>javax.servlet</groupId>
+			<artifactId>jstl</artifactId>
+			<version>1.2</version>
+			<scope>provided</scope>
+		</dependency>
+		
+		<dependency>
+			<groupId>javax.servlet.jsp</groupId>
+			<artifactId>jsp-api</artifactId>
+			<version>2.2</version>
+			<scope>provided</scope>
+		</dependency>		
 
 	</dependencies>
 	<build>
