--- a/pom.xml
+++ b/pom.xml
@@ -111,7 +111,7 @@
 		<dependency>
 			<groupId>net.sf.ehcache</groupId>
 			<artifactId>ehcache-core</artifactId>
-			<version>2.2.1-SNAPSHOT</version>
+			<version>2.2.0</version>
 		</dependency>
 
 	</dependencies>
