--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,12 @@
 		<developerConnection>scm:git:git@github.com:caelum/vraptor-action-cache.git</developerConnection>
 	</scm>
 
+    <parent>
+        <groupId>org.sonatype.oss</groupId>
+        <artifactId>oss-parent</artifactId>
+        <version>7</version>
+    </parent>
+
 	<name>vraptor-action-cache</name>
 	<url>http://maven.apache.org</url>
 
